✅ 開発・ステージング環境完全統一: 統一環境管理スクリプト追加、両環境統一システムで動作確認完了

--- a/templates/add_bom.html
+++ b/templates/add_bom.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}BOM構成追加 - 釣り糸製造BOM管理システム{% endblock %}
+{% block title %}BOM構成追加 - 製造BOM管理システム{% endblock %}
 
 {% block content %}
 <div class="row">
