--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}アイテム追加 - 釣り糸製造BOM管理システム{% endblock %}
+{% block title %}アイテム追加 - 製造BOM管理システム{% endblock %}
 
 {% block content %}
 <div class="row">
