--- a/templates/bom_tree.html
+++ b/templates/bom_tree.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}BOM構造 - {{ item.item_name }} - 釣り糸製造BOM管理システム{% endblock %}
+{% block title %}BOM構造 - {{ item.item_name }} - 製造BOM管理システム{% endblock %}
 
 <!-- BOMツリー描画のマクロ -->
 {% macro render_bom_tree(node, depth) %}
