✨ Implement basic lot management system with 9-level process support, quality grades, and traceability features

--- a/templates/base.html
+++ b/templates/base.html
@@ -163,6 +163,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('lots_list') }}">
+                            <i class="fas fa-layer-group"></i> ロット管理
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('add_bom') }}">
                             <i class="fas fa-project-diagram"></i> BOM構成追加
                         </a>
